# segment

./: Cargo.toml
.github/workflows/: rust.yml
src/: auto_batcher.rs  batcher.rs  http.rs
