[package]
authors = ["Tamo <tamo@meilisearch.com", "Dean Karn <dean@segment.com>", "Ulysse Carion <ulysse@segment.com>"]
description = "Segment analytics client for Rust. Forked for Meilisearch: https://github.com/meilisearch"
edition = "2018"
license = "MIT"
repository = "https://github.com/irevoire/segment"
keywords = ["meilisearch", "analytics", "segment"]
name = "segment"
version = "0.2.3"
readme = "README.md"

[dependencies]
async-trait = "0.1.74"
time = { version = "0.3.30", features = ["serde-well-known", "formatting", "parsing"] }
reqwest = { version = "0.11.22", features = ["json"], default-features = false }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"], default-features = false }

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
