[package]
authors = ["Tamo <tamo@meilisearch.com", "Dean Karn <dean@segment.com>", "Ulysse Carion <ulysse@segment.com>"]
description = "Segment analytics client for Rust. Forked for Meilisearch: https://github.com/meilisearch"
edition = "2021"
license = "MIT"
repository = "https://github.com/irevoire/segment"
keywords = ["meilisearch", "analytics", "segment"]
name = "segment"
version = "0.2.3"
readme = "README.md"

[dependencies]
async-trait = "0.1.80"
time = { version = "0.3.36", features = ["serde-well-known", "formatting", "parsing"] }
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.60"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"], default-features = false }

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
